# tomlchef

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml
.github/workflows/: workflow.yml
.reqs/: requirements-win.in  requirements-win.txt  requirements.in  requirements.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  UPGRADING.md
tests/: test_cli.py  test_job.py
tomlchef/: __init__.py  _cli.py  _version.py  job.py
